ADD: header skeleton

--- a/index.html
+++ b/index.html
@@ -8,7 +8,29 @@
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://kit.fontawesome.com/608f77ef5b.js" crossorigin="anonymous"></script>
 </head>
-<body>
-    
+<body class="debug">
+    <header>
+        <div class="container">
+            <nav class="row">
+                <div class="col-auto logo">
+                    Logo
+                </div>
+                <div class="col searchbar">
+                    Searchbar
+                </div>
+                <div class="col-auto link">
+                    <ul class="link_list d-none d-lg-flex">
+                        <li>A</li>
+                        <li>A</li>
+                        <li>A</li>
+                        <li>A</li>
+                    </ul>
+                    <div><i class="fa-solid fa-bell"></i></div>
+                </div>
+
+            </nav>
+        </div>
+
+    </header>
 </body>
 </html>
