--- a/index.html
+++ b/index.html
@@ -73,27 +73,73 @@
 
                             <section  class="app_cards my-3">
                                     <div class="container">
-                                        <div class="row flex-column flex-lg-row g-3">
-                                            <div class="col-100 col-lg-8">
+                                        <div class="row row-cols-lg-4 flex-column flex-lg-row g-3">
+
+                                            <div class="col col-lg-8">
                                                 <div class="card">
                                                     card 1
                                                 </div>
                                             </div>
-                                            <div class="col-100 col-lg-4">
+
+                                            <div class="col">
                                                 <div class="card">
                                                     card 2
                                                 </div>
                                             </div>
-                                            <div class="col-100 col-lg-8">
+
+                                            <div class="col col-lg-8">
                                                 <div class="card">
-                                                    card 3
+                                                    <div class="card-header">
+                                                        f. a. q.
+                                                      </div>
+                                                    
+                                                    <div class="accordion accordion-flush" id="faq">
+                                                        <div class="accordion-item">
+                                                          <h2 class="accordion-header">
+                                                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                                                              Come aggiungere un nuovo studente?
+                                                            </button>
+                                                          </h2>
+                                                          <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#faq">
+                                                            <div class="accordion-body">
+                                                              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum iure asperiores magni, quasi repudiandae magnam!</p>
+                                                            </div>
+                                                          </div>
+                                                        </div>
+                                                        <div class="accordion-item">
+                                                          <h2 class="accordion-header">
+                                                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                                              Come posso accedere alle informazioni del mio account?
+                                                            </button>
+                                                          </h2>
+                                                          <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#faq">
+                                                            <div class="accordion-body">
+                                                              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+                                                            </div>
+                                                          </div>
+                                                        </div>
+                                                        <div class="accordion-item">
+                                                          <h2 class="accordion-header">
+                                                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                                              Posso usare questa dashboard da mobile?
+                                                            </button>
+                                                          </h2>
+                                                          <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#faq">
+                                                            <div class="accordion-body">
+                                                              <p>Sì</p>
+                                                            </div>
+                                                          </div>
+                                                        </div>
+                                                    </div>
                                                 </div>
                                             </div>
-                                            <div class="col-100 col-lg-4">
+
+                                            <div class="col">
                                                 <div class="card">
                                                     card 4
                                                 </div>
                                             </div>
+
                                         </div>
                                     </div>
 
