--- a/index.html
+++ b/index.html
@@ -77,23 +77,44 @@
 
                                             <div class="col col-lg-8">
                                                 <div class="card">
-                                                    card 1
+                                                    <div class="card-header">
+                                                        Prossime Classi
+                                                      </div>
+                                                                                                         
                                                 </div>
                                             </div>
 
                                             <div class="col">
                                                 <div class="card">
-                                                    card 2
+
+                                                    <div class="card-header">
+                                                        Todo
+                                                      </div>
+
+                                                    <ul class="list-group p-2">
+                                                        <li class="list-group-item">
+                                                          <input class="form-check-input me-1" type="checkbox" value="" id="firstCheckbox">
+                                                          <label class="form-check-label" for="firstCheckbox">First checkbox</label>
+                                                        </li>
+                                                        <li class="list-group-item">
+                                                          <input class="form-check-input me-1" type="checkbox" value="" id="secondCheckbox">
+                                                          <label class="form-check-label" for="secondCheckbox">Second checkbox</label>
+                                                        </li>
+                                                        <li class="list-group-item">
+                                                          <input class="form-check-input me-1" type="checkbox" value="" id="thirdCheckbox">
+                                                          <label class="form-check-label" for="thirdCheckbox">Third checkbox</label>
+                                                        </li>
+                                                      </ul>
                                                 </div>
                                             </div>
 
                                             <div class="col col-lg-8">
                                                 <div class="card">
-                                                    <div class="card-header">
+                                                    <div class="card-header text-uppercase">
                                                         f. a. q.
                                                       </div>
                                                     
-                                                    <div class="accordion accordion-flush" id="faq">
+                                                    <div class="accordion accordion-flush p-2" id="faq">
                                                         <div class="accordion-item">
                                                           <h2 class="accordion-header">
                                                             <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
