--- a/index.html
+++ b/index.html
@@ -14,11 +14,14 @@
                 <nav>
                     <div class="container">
                         <div class="row">
-                            <div class="col-auto logo">
-                                Logo
+                            <div class="col-auto">
+                                <div>
+                                    <img src="" alt="">
+                                </div>
+                              
                             </div>
                             <div class="col searchbar">
-                                Searchbar
+                                <input class="w-100" type="text" placeholder="Prova a cercare lezioni di lavarel">
                             </div>
                             <div class="col-auto link">
                                 <ul class="link_list d-none d-lg-flex">
