--- a/index.html
+++ b/index.html
@@ -89,7 +89,17 @@
                                         <div class="d-flex gap-3">
                                           <h3>Nuovo Studente</h3>
 
-                                          <button type="button" class="btn btn-outline-light"><i class="fa-solid fa-plus"></i></button>
+                                          <button type="button" class="btn btn-outline-light" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"><i class="fa-solid fa-plus"></i></button>
+
+                                          <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+                                            <div class="offcanvas-header">
+                                              <h5 id="offcanvasRightLabel">Offcanvas right</h5>
+                                              <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                                            </div>
+                                            <div class="offcanvas-body">
+                                              ...
+                                            </div>
+                                          </div>
                                         </div>
                                        
                                       </div>
@@ -359,15 +369,15 @@
                                                 <ul class="list-group">
                                                   <li class="list-group-item">
                                                     <input class="form-check-input me-1" type="checkbox" value="" id="firstCheckbox">
-                                                    <label class="form-check-label" for="firstCheckbox">First checkbox</label>
+                                                    <label class="form-check-label" for="firstCheckbox">Kickoff nuove classi</label>
                                                   </li>
                                                   <li class="list-group-item">
                                                     <input class="form-check-input me-1" type="checkbox" value="" id="secondCheckbox">
-                                                    <label class="form-check-label" for="secondCheckbox">Second checkbox</label>
+                                                    <label class="form-check-label" for="secondCheckbox">Lezione su Bootstrap</label>
                                                   </li>
                                                   <li class="list-group-item">
                                                     <input class="form-check-input me-1" type="checkbox" value="" id="thirdCheckbox">
-                                                    <label class="form-check-label" for="thirdCheckbox">Third checkbox</label>
+                                                    <label class="form-check-label" for="thirdCheckbox">Controllare Username su github</label>
                                                   </li>
                                                 </ul>
                                               </div>
@@ -413,7 +423,11 @@
 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+      <script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+			crossorigin="anonymous"
+		></script>
 
 </body>
 </html>
